# TIN-NetworkFileSystem

./: .gitignore  CMakeLists.txt  README.md  build.sh  hosts.txt
client/: CMakeLists.txt
client/src/: main.cpp
client/tests/: CMakeLists.txt
client2/: CMakeLists.txt
client2/src/: main.cpp
mynfslib/: CMakeLists.txt
mynfslib/include/: mynfslib.h  mynfslib.hpp
mynfslib/src/: authentication_error.h  mynfslib.cpp
mynfslib/src/endpoint/: ClientEndpoint.cpp  ClientEndpoint.h
mynfslib/tests/: CMakeLists.txt  MyNFSLibTests.cpp  SampleTest.cpp
server/: CMakeLists.txt
server/src/: AccessManager.cpp  AccessManager.h  SafeQueue.h  TerminalListener.h  ThreadCounter.h  main.cpp
server/src/endpoint/: ServerEndpoint.cpp  ServerEndpoint.h  ServerSubEndpoint.cpp  ServerSubEndpoint.h
server/src/execution/: HandlerFactoryPool.cpp  HandlerFactoryPool.h
server/src/execution/Executor/: Executor.cpp  Executor.h
server/src/execution/handlerFactories/: CloseHandlerFactory.h  HandlerFactory.h  LseekHandlerFactory.h  OpenHandlerFactory.h  ReadHandlerFactory.h  UnlinkHandlerFactory.h  WriteHandlerFactory.h
server/src/execution/handlers/: CloseHandler.cpp  CloseHandler.h  Handler.cpp  Handler.h  LseekHandler.cpp  LseekHandler.h  OpenHandler.cpp  OpenHandler.h  ReadHandler.cpp  ReadHandler.h  UnlinkHandler.cpp  UnlinkHandler.h  WriteHandler.cpp  WriteHandler.h
server/tests/: AccessManagerTests.cpp  CMakeLists.txt  ExecutorTests.cpp  HandlersTests.cpp  SafeQueueTests.cpp  SampleTest.cpp  TestsMain.cpp
shared/addresses/: CMakeLists.txt
shared/addresses/include/addresses/: AnyAddress.h  EphemeralPort.h  IpAddress.h  LocalAddress.h  NetworkAddress.h  Port.h  address_error.h
shared/addresses/src/: IpAddress.cpp  NetworkAddress.cpp  Port.cpp
shared/addresses/tests/: AddressesTest.cpp  CMakeLists.txt
shared/application/: CMakeLists.txt
shared/application/include/application/mynfs/: bad_argument_error.h
shared/application/include/application/mynfs/errors/: CloseReplyError.h  LseekReplyError.h  MyNFSError.h  OpenReplyError.h  ReadReplyError.h  UnlinkReplyError.h  WriteReplyError.h
shared/application/include/application/mynfs/replies/: CloseReply.h  LseekReply.h  OpenReply.h  ReadReply.h  Reply.h  UnlinkReply.h  WriteReply.h
shared/application/include/application/mynfs/requests/: CloseRequest.h  LseekRequest.h  OpenRequest.h  ReadRequest.h  Request.h  UnlinkRequest.h  WriteRequest.h
shared/application/src/mynfs/errors/: CloseReplyError.cpp  LseekReplyError.cpp  OpenReplyError.cpp  ReadReplyError.cpp  UnlinkReplyError.cpp  WriteReplyError.cpp
shared/application/src/mynfs/replies/: CloseReply.cpp  LseekReply.cpp  OpenReply.cpp  ReadReply.cpp  UnlinkReply.cpp  WriteReply.cpp
shared/application/src/mynfs/requests/: CloseRequest.cpp  LseekRequest.cpp  OpenRequest.cpp  ReadRequest.cpp  UnlinkRequest.cpp  WriteRequest.cpp
shared/application/tests/: CMakeLists.txt  CloseReplyTests.cpp  CloseRequestTests.cpp  LseekReplyTests.cpp  LseekRequestTests.cpp  OpenReplyTests.cpp  OpenRequestTests.cpp  ReadReplyTests.cpp  ReadRequestTests.cpp  UnlinkReplyTests.cpp  UnlinkRequestTests.cpp  WriteReplyTests.cpp  WriteRequestTests.cpp
shared/messages/: CMakeLists.txt
shared/messages/include/messages/: ConfirmMessage.h  DataMessage.h  Message.h  Message.hpp
shared/messages/src/: ConfirmMessage.cpp  DataMessage.cpp  DomainData.cpp  Message.cpp  PlainData.cpp  RequestMessage.cpp
shared/protocol/: CMakeLists.txt
shared/protocol/include/protocol/replies/: OpenReply.h  Reply.h
shared/protocol/include/protocol/requests/: Request.h
shared/protocol/src/replies/: OpenReply.cpp
shared/protocol/src/requests/: OpenRequest.cpp
shared/session/: CMakeLists.txt
shared/session/include/session/: Converter.h  DomainData.h  PlainError.h
shared/session/include/session/messages/: ConfirmMessage.h  DataMessage.h  Message.h  RequestMessage.h
shared/session/src/: Converter.cpp  DomainData.cpp
shared/session/src/messages/: ConfirmMessage.cpp  DataMessage.cpp  Message.cpp  RequestMessage.cpp
shared/session/tests/: CMakeLists.txt  ConfirmMessageTests.cpp  ConverterTests.cpp  DataMessageTests.cpp  MessagesSendingTests.cpp  RequestMessageTests.cpp
shared/socket/: CMakeLists.txt
shared/socket/include/socket/: Socket.h  Socket.hpp
shared/socket/src/: Socket.cpp
shared/transport/: CMakeLists.txt
shared/transport/include/transport/: PlainData.h  read_interrupted_error.h  socket_error.h  timeout_error.h
shared/transport/include/transport/socket/: Socket.h  UDPSocket.h
shared/transport/src/: PlainData.cpp
shared/transport/src/socket/: Socket.cpp  UDPSocket.cpp
shared/transport/tests/: CMakeLists.txt  PlainDataTests.cpp  SocketTests.cpp
test_lib/: CMakeLists.txt
